hydro/_core.py

"""
Hydro Core — ctypes bindings to libhydro

Loads the shared library and declares all public C function signatures
as Python-callable wrappers.  NumPy arrays are passed as ctypes pointers
via ``np.ctypeslib.ndpointer`` or manual ``ctypes.c_void_p`` casting.

Usage
-----
>>> from hydro import _core
>>> dom = _core.hydro_domain_create(100, 180)
>>> _core.hydro_domain_destroy(dom)
"""

import ctypes
import os
import sys
from ctypes import (
    c_int,
    c_int64,
    c_double,
    c_char_p,
    c_void_p,
    POINTER,
    byref,
)

import numpy as np
from numpy.ctypeslib import ndpointer

# ---------------------------------------------------------------------------
# Type aliases matching hydro/types.h
# ---------------------------------------------------------------------------
hydro_int = c_int64                # typedef int64_t hydro_int
hydro_uint = ctypes.c_uint64       # typedef uint64_t hydro_uint

# ---------------------------------------------------------------------------
# Find and load the shared library
# ---------------------------------------------------------------------------

def _find_libhydro():
    """Locate libhydro.so relative to the build directory or LD_LIBRARY_PATH."""
    # 1. Check environment variable
    path = os.environ.get("HYDRO_LIB_PATH")
    if path and os.path.exists(path):
        return path

    # 2. Look in the standard build location
    candidates = [
        # In-build-tree (meson/CMake)
        os.path.join(os.path.dirname(__file__), "..", "build", "libhydro.so"),
        os.path.join(os.path.dirname(__file__), "..", "builddir", "libhydro.so"),
        # Installed alongside the package
        os.path.join(os.path.dirname(__file__), "libhydro.so"),
        # System-wide
        "libhydro.so",
    ]

    for p in candidates:
        if os.path.exists(p):
            return p
        # Also try via ld
    try:
        lib = ctypes.CDLL("libhydro.so")
        return "libhydro.so"
    except OSError:
        pass

    # Fall back to build/ relative to CWD
    cwd_build = os.path.join(os.getcwd(), "build", "libhydro.so")
    if os.path.exists(cwd_build):
        return cwd_build

    raise OSError(
        "Cannot find libhydro.so.  Set HYDRO_LIB_PATH or build the library:\n"
        "  cd /path/to/hydro_core && mkdir build && cd build && cmake .. && make"
    )


_lib_path = _find_libhydro()
_lib = ctypes.CDLL(_lib_path)

# ===================================================================
# domain.c
# ===================================================================

_lib.hydro_domain_create.argtypes = [hydro_int, hydro_int]
_lib.hydro_domain_create.restype = c_void_p

_lib.hydro_domain_destroy.argtypes = [c_void_p]
_lib.hydro_domain_destroy.restype = None

_lib.hydro_domain_set_geometry.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
]
_lib.hydro_domain_set_geometry.restype = None

_lib.hydro_domain_set_boundary_tag_map.argtypes = [
    c_void_p,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    hydro_int,
]
_lib.hydro_domain_set_boundary_tag_map.restype = None

_lib.hydro_domain_set_quantity.argtypes = [
    c_void_p, c_char_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
]
_lib.hydro_domain_set_quantity.restype = None

_lib.hydro_domain_set_parameter.argtypes = [c_void_p, c_char_p, c_double]
_lib.hydro_domain_set_parameter.restype = None

_lib.hydro_domain_get_quantity.argtypes = [
    c_void_p, c_char_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
]
_lib.hydro_domain_get_quantity.restype = None

_lib.hydro_domain_get_time.argtypes = [c_void_p]
_lib.hydro_domain_get_time.restype = c_double

# ===================================================================
# mesh.c
# ===================================================================

_lib.hydro_mesh_build_neighbour_structure.argtypes = [c_void_p]
_lib.hydro_mesh_build_neighbour_structure.restype = c_int

_lib.hydro_mesh_build_boundary_structure.argtypes = [c_void_p]
_lib.hydro_mesh_build_boundary_structure.restype = c_int

# ===================================================================
# quantity.c
# ===================================================================

_lib.hydro_quantity_update.argtypes = [c_void_p, c_double]
_lib.hydro_quantity_update.restype = None

_lib.hydro_quantity_extrapolate_first_order.argtypes = [c_void_p]
_lib.hydro_quantity_extrapolate_first_order.restype = None

_lib.hydro_quantity_extrapolate_second_order.argtypes = [c_void_p]
_lib.hydro_quantity_extrapolate_second_order.restype = None

_lib.hydro_quantity_extrapolate_second_order_edge.argtypes = [c_void_p]
_lib.hydro_quantity_extrapolate_second_order_edge.restype = None

_lib.hydro_quantity_distribute_edges_to_vertices.argtypes = [c_void_p]
_lib.hydro_quantity_distribute_edges_to_vertices.restype = None

_lib.hydro_quantity_backup.argtypes = [c_void_p]
_lib.hydro_quantity_backup.restype = None

_lib.hydro_quantity_saxpy.argtypes = [c_void_p, c_double, c_double, c_double]
_lib.hydro_quantity_saxpy.restype = None

_lib.hydro_quantity_update_derived.argtypes = [c_void_p]
_lib.hydro_quantity_update_derived.restype = None

# ===================================================================
# fluxes.c
# ===================================================================

_lib.hydro_compute_fluxes_central.argtypes = [c_void_p, c_double]
_lib.hydro_compute_fluxes_central.restype = c_double

_lib.hydro_protect.argtypes = [c_void_p]
_lib.hydro_protect.restype = c_int

_lib.hydro_fix_negative_cells.argtypes = [c_void_p]
_lib.hydro_fix_negative_cells.restype = c_int

# Boundary condition types
HYDRO_BC_NONE          = 0
HYDRO_BC_REFLECTIVE    = 1
HYDRO_BC_DIRICHLET     = 2
HYDRO_BC_TRANSMISSIVE  = 3
HYDRO_BC_TIME          = 4
HYDRO_BC_DIRICHLET_DISCHARGE = 5
HYDRO_BC_TRANSMISSIVE_STAGE   = 6

# BC parameters struct
class BCParams(ctypes.Structure):
    """Corresponds to C hydro_bc_params_t."""
    _fields_ = [
        ("stage", c_double),
        ("wh0",   c_double),
    ]


# ===================================================================
# boundaries.c
# ===================================================================

_lib.hydro_boundary_update.argtypes = [c_void_p]
_lib.hydro_boundary_update.restype = None

_lib.hydro_domain_set_boundary.argtypes = [c_void_p, hydro_int, c_int, c_void_p]
_lib.hydro_domain_set_boundary.restype = None

_lib.hydro_boundary_update_stage_time.argtypes = [
    c_void_p, hydro_int, c_double, c_double, c_double,
]
_lib.hydro_boundary_update_stage_time.restype = None

_lib.hydro_boundary_evaluate_reflective_segment.argtypes = [
    c_void_p, hydro_int,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
]
_lib.hydro_boundary_evaluate_reflective_segment.restype = None

_lib.hydro_boundary_evaluate_dirichlet_segment.argtypes = [
    c_void_p, hydro_int,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    c_double,
]
_lib.hydro_boundary_evaluate_dirichlet_segment.restype = None

_lib.hydro_boundary_evaluate_transmissive_segment.argtypes = [
    c_void_p, hydro_int,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    c_double, c_int,
]
_lib.hydro_boundary_evaluate_transmissive_segment.restype = None

_lib.hydro_boundary_evaluate_discharge_segment.argtypes = [
    c_void_p, hydro_int,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    c_double, c_double,
]
_lib.hydro_boundary_evaluate_discharge_segment.restype = None

# ===================================================================
# friction.c
# ===================================================================

_lib.hydro_manning_friction_flat_semi_implicit.argtypes = [c_void_p]
_lib.hydro_manning_friction_flat_semi_implicit.restype = None

_lib.hydro_manning_friction_sloped_semi_implicit.argtypes = [c_void_p]
_lib.hydro_manning_friction_sloped_semi_implicit.restype = None

# ===================================================================
# forcing.c
# ===================================================================

_lib.hydro_wind_stress_apply.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), c_double,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), c_double,
    hydro_int, c_double,
]
_lib.hydro_wind_stress_apply.restype = None

_lib.hydro_barometric_pressure_apply.argtypes = [
    c_void_p, ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int, c_double,
]
_lib.hydro_barometric_pressure_apply.restype = None

_lib.hydro_rainfall_apply.argtypes = [c_void_p, c_double]
_lib.hydro_rainfall_apply.restype = None

_lib.hydro_rate_apply.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    hydro_int,
]
_lib.hydro_rate_apply.restype = None

_lib.hydro_gradient_triangle.argtypes = [
    c_double, c_double, c_double, c_double, c_double, c_double,
    c_double, c_double, c_double,
    POINTER(c_double), POINTER(c_double),
]
_lib.hydro_gradient_triangle.restype = None

# ===================================================================
# operators.c
# ===================================================================

_lib.hydro_manning_friction_explicit.argtypes = [c_void_p]
_lib.hydro_manning_friction_explicit.restype = None

_lib.hydro_bed_shear_erosion_apply.argtypes = [
    c_void_p, c_double, c_double,
    ndpointer(np.int64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_bed_shear_erosion_apply.restype = None

_lib.hydro_set_stage.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_set_stage.restype = None

_lib.hydro_set_elevation.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_set_elevation.restype = None

_lib.hydro_kinematic_viscosity_apply.argtypes = [
    c_void_p, ndpointer(np.float64, flags="C_CONTIGUOUS"), c_double,
]
_lib.hydro_kinematic_viscosity_apply.restype = None

# ===================================================================
# structures.c
# ===================================================================

_lib.hydro_boyd_box_discharge.argtypes = [
    c_double, c_double, c_double, c_double, c_double,
    c_double, c_double, c_double, c_int,
    c_double, c_double, c_double, c_double,
    POINTER(c_double), POINTER(c_double), POINTER(c_double),
]
_lib.hydro_boyd_box_discharge.restype = c_int

_lib.hydro_boyd_pipe_discharge.argtypes = [
    c_double, c_double, c_double, c_double,
    c_double, c_double, c_double, c_int,
    c_double, c_double, c_double, c_double,
    POINTER(c_double), POINTER(c_double), POINTER(c_double),
]
_lib.hydro_boyd_pipe_discharge.restype = c_int

_lib.hydro_weir_orifice_trapezoid_discharge.argtypes = [
    c_double, c_double, c_double, c_double, c_double, c_double,
    c_double, c_double, c_double, c_int,
    c_double, c_double, c_double, c_double,
    POINTER(c_double), POINTER(c_double), POINTER(c_double),
]
_lib.hydro_weir_orifice_trapezoid_discharge.restype = c_int
